set up home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <nav>
+    <%= link_to 'Artists', artists_path %>   <%= link_to 'Murals', murals_path %>
+    </nav>
     <%= yield %>
   </body>
 </html>
