--- a/app/views/murals/index.html.erb
+++ b/app/views/murals/index.html.erb
@@ -1,6 +1,6 @@
-Here is a list of all the Murals. If you don't see one please add it here!<br>  
+Here is a list of all the Murals. If you don't see one please add it <%= link_to 'here', new_mural_path%><br>  <br>
 
 <% @murals.each do |mural| %>
-<%= mural.name %> by <%=mural.artist.artist_name  %> located at <%=mural.neighborhood.name  %><br>
+<%= mural.name %> by <%= link_to mural.artist.artist_name, artist_path(mural.artist)   %> located in <%=mural.neighborhood.name  %><br>
 
 <% end %>
