--- a/app/views/murals/new.html.erb
+++ b/app/views/murals/new.html.erb
@@ -2,8 +2,12 @@ Here you can add a Mural that is not yet on this site!<br>
 
 <%= form_for (@mural) do |f| %>
 Name:  <%= f.text_field :name %><br>
-Artist: <%= f.collection_select :artist_id, Artist.all, :id, :name, include_blank: 'Please select an artist'  %><br>
+Artist: <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, include_blank: 'Please select an artist'  %><br>
 Location: <%= f.collection_select :neighborhood_id, Neighborhood.all, :id, :name, include_blank: 'Please select a location' %><br>
+Don't see the neighborhood please add it
+<%= f.fields_for :neighborhood, @mural.build_neighborhood do |neighborhood_fields|%>
+  <%= neighborhood_fields.text_field :name%><br>
+<% end %>
 Upload Picture <br>
 <%= f.submit %>
 <% end %>
