--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <nav>
-    <%= link_to 'Artists', artists_path %>   <%= link_to 'Murals', murals_path %>
+    <%= link_to 'Artists', artists_path %>   <%= link_to 'Murals', murals_path %> <%= link_to 'Neighborhoods', neighborhoods_path %>
     </nav>
     <%= yield %>
   </body>
