--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,5 +1,5 @@
 Here is a list of all the artists <br>
 
 <% @artists.each do |artist| %>
-<h4><%= link_to artist.artist_name, artist_path(artist) %><br></h4>
+<h4 class="artist-title"><%= link_to artist.artist_name, artist_path(artist) %><br></h4>
 <% end %>
