--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,11 @@
 
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise|Tajawal" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=" rel="stylesheet"> -->
   </head>
 
   <body>
     <nav>
-    <%= link_to 'Artists', artists_path %>   <%= link_to 'Murals', murals_path %> <%= link_to 'Neighborhoods', neighborhoods_path %>
+    <%= link_to 'ARTISTS', artists_path %> · <%= link_to 'MURALS', murals_path %> ·  <%= link_to 'NEIBORHOODS', neighborhoods_path %>
     </nav>
     <%= yield %>
   </body>
