added links for sign in and sign up

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,1 +1,4 @@
-Welcome to the page where you can find all the murals in nyc. 
+Welcome to the page where you can find all the murals in nyc.
+
+
+<%= link_to 'Sign-in', new_session_path %>,  <%= link_to 'Sign-up', new_user_path %> or log in via <%= link_to 'Google', '/auth/google_oauth2' %></p>
