--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -11,7 +11,9 @@
 <ul>
 
 <% @artist.murals.each do |mural| %>
- <li><%= mural.location_details %> located in <%= link_to mural.neighborhood.name, neighborhoods_path%></li>
+ <li><%= link_to mural.location_details, artist_mural_path(@artist, mural)  %> located in <%= link_to mural.neighborhood.name, neighborhood_path(mural.neighborhood)%></li>
  <br>
 <% end %>
 </ul>
+
+<%= link_to 'New Mural', new_artist_mural_path(@artist) %> <%= link_to 'Edit Details', edit_artist_path %>
