--- a/app/views/murals/new.html.erb
+++ b/app/views/murals/new.html.erb
@@ -1,3 +1,5 @@
-Here you can add a Mural that is not yet on this site!<br>
+<h2><%= set_artist_by_id.artist_name %> </h2>
 
-<%= render partial: 'mural', locals: {mural: @mural†}%>
+Add a new mural for that is not yet on this site!<br>
+
+<%= render partial: 'mural', locals: {mural: @mural}%>
