Update welcome message and added image

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,4 +1,5 @@
-Welcome to the page where you can find all the murals in nyc.
+<div class="welcome-page">
+  <p>Welcome to the page where you can find all the murals in NYC.</p> Not a member? <%= link_to 'Sign-Up', new_user_path %> to get access to our site where you can add, edit and view the hottest murals in NYC!
+</div>
 
-
-<%= link_to 'Sign-in', new_session_path %>,  <%= link_to 'Sign-up', new_user_path %> or log in via <%= link_to 'Google', '/auth/google_oauth2' %></p>
+<%= image_tag "kobra-fight.jpg" %>
