--- a/app/views/murals/index.html.erb
+++ b/app/views/murals/index.html.erb
@@ -1,7 +1,10 @@
 Here is a list of all the Murals. If you don't see one please add it <%= link_to 'here', new_mural_path%><br>  <br>
-<ul>
-  <% @murals.each do |mural| %>
-  <li><%= mural.location_details %> by <%= link_to mural.artist.artist_name, artist_path(mural.artist)   %> located in <%=link_to mural.neighborhood.name, neighborhood_path(mural.neighborhood)  %><br></li>
+<% @neighborhoods.each do |hood| %>
 
-  <% end %>
-</ul>
+<h2><%= hood.name %></h2>
+  <ul>
+    <% hood.murals.each do |mural| %>
+    <li><%= link_to mural.location_details, mural_path(mural) %> by <%= link_to mural.artist.artist_name, artist_path(mural.artist) %> located in <%=link_to mural.neighborhood.name, neighborhood_path(mural.neighborhood) %><br></li>
+    <% end %>
+  </ul>
+<% end %>
