--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -3,6 +3,6 @@ These are all the murals in <%= @neighborhood.name %>
 <ul>
   <% @neighborhood.murals.each do |mural| %>
  <h4 class="artist-title"><%= link_to mural.artist.artist_name, artist_path(mural.artist) %></h4>
-    <li><%= mural.location_details %></li>
+    <li><%= link_to mural.location_details, artist_mural_path(mural.artist, mural) %></li>
     <% end %>
 </ul>
