--- a/app/views/layouts/logged_in.html.erb
+++ b/app/views/layouts/logged_in.html.erb
@@ -17,7 +17,7 @@
       <%= link_to set_user.username.upcase, edit_user_path(set_user) %>  · <%= link_to 'SIGN OUT', signout_path %>
     </nav>
     <nav class="nav-left">
-    <%= link_to 'ARTISTS', artists_path %> · <%= link_to 'NEIBORHOODS', neighborhoods_path %> · HISTORY
+    <%= link_to 'ARTISTS', artists_path %> · <%= link_to 'NEIBORHOODS', neighborhoods_path %> · <%= link_to 'HISTORY', history_path %>
     </nav>
     <div class="clear-nav">
 
