--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,20 +13,11 @@
  *= require_tree .
  *= require_self
  */
-.artist-title{
-  font-family: 'Permanent Marker', cursive;
 
+.main-text{
+  margin-left: 30px;
 }
 
-h4.artist-title{
-  margin-bottom: 10px;
-}
-.artist-title a{
-  color: black;
-}
-nav{
-  padding-bottom: 15px;
-}
 
 .field_with_errors{
   clear: both;
@@ -45,6 +36,7 @@ body{
 nav{
   font-size: 1.3em;
   margin-right: 100px;
+  padding-bottom: 15px;
 }
 
 .nav-left{
@@ -58,13 +50,16 @@ nav{
   clear: both;
 }
 
+img{
+  margin: 10px;
+  object-fit: contain;
+  height: 100%;
+  width: 450px;
+}
+
 .welcome-page{
   font-size: 1.1em;
 
-}
-
-img{
-  margin: 10px;
 }
 
 .welcome-page p{
@@ -89,4 +84,10 @@ img{
   max-width: 800px;
   justify-content: center;
   margin-left: 50px;
+}
+
+.history a{
+  display: block;
+  margin-left: auto;
+  margin-right: auto; 
 }
