Added history page

--- a/app/views/application/history.html.erb
+++ b/app/views/application/history.html.erb
@@ -1,3 +1,7 @@
 <div class="history">
-  Graffiti and street art have been synonymous with New York City since the ’70s, as the movement grew alongside the beginnings of hip-hop. Now a permanent part of pop culture, the evolution of graffiti and street art has given way to sanctioned and celebrated murals across the globe. We’ve rounded up some of New York’s most historic and famous hot spots for art lovers to explore and enjoy around Manhattan.
+  Graffiti and street art have been synonymous with New York City since the ’70s, as the movement grew alongside the beginnings of hip-hop. Now a permanent part of pop culture, the evolution of graffiti and street art has given way to sanctioned and celebrated murals across the globe.
+</div>
+
+<div class="history">
+  <%= image_tag "harring01.jpg" %>
 </div>
