added link to user murals path

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,5 @@
+See the <%= link_to 'murals', murals_path %> you have added.<br>
+
+Edit your info<br>
+
 <%= render partial: 'user', locals: { user: @user}  %>
