fixed partial syntax

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,5 +3,5 @@
 
 <div class="sign-up-form">
   Please fill out all the information
-  <%= render partial: 'user', locals{ user: @user}  %>
+  <%= render partial: 'user', locals: { user: @user}  %>
 </div>
