--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,4 +1,9 @@
-<h1 class="artist-title"><%= @artist.artist_name %></h1>
+<div class="artist-name">
+  <h1 class="artist-title"><%= @artist.artist_name %></h1>
+
+</div>
+
+
 <%= instagram(@artist) %>
 
 <h4 >Real name: <%= @artist.name %><br></h4>
