--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -13,12 +13,16 @@
 
 <h3>Murals: </h3>
 
-<ul>
+<ul id="artistMurals">
 
 <% @artist.murals.each do |mural| %>
- <li><%= link_to mural.location_details, artist_mural_path(@artist, mural)  %> located in <%= link_to mural.neighborhood.name, neighborhood_path(mural.neighborhood)%></li>
+
+ <li><%= link_to mural.location_details, artist_mural_path(@artist, mural), id:mural.id %> located in <%= link_to mural.neighborhood.name, neighborhood_path(mural.neighborhood)%></li>
  <br>
 <% end %>
 </ul>
 
 <%= link_to 'New Mural', new_artist_mural_path(@artist) %> <%= link_to 'Edit Details', edit_artist_path %>
+<script type="text/javascript">
+  $("#artistMurals").on('click', () => alert('I was clicked'))
+</script>
