--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -23,6 +23,6 @@
 </ul>
 
 <%= link_to 'New Mural', new_artist_mural_path(@artist) %> <%= link_to 'Edit Details', edit_artist_path %>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   $("#artistMurals").on('click', () => alert('I was clicked'))
-</script>
+</script> -->
