added jquery and submit form for mural via js

--- a/app/views/murals/_mural.html.erb
+++ b/app/views/murals/_mural.html.erb
@@ -17,7 +17,11 @@ Check if mural is currently active?  <%= f.check_box :active %><br>
     $("form#new_mural").on('submit', function(event) {
         event.preventDefault();
         console.log(event)
-        alert('this is working')
+        var values = $(this).serialize()
+        var posting = $.post('/murals', values)
+        // posting.done(function (data){
+        //   console.log(data)
+        // })
     })
   })
 </script>
