trying to get artist list to display properly

--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -14,3 +14,13 @@ h4.artist-title{
   float: right;
   margin-right: 550px;
 }
+
+
+#displayMural{
+  float: left;
+  margin-right: 300px;
+}
+
+#artistMurals{
+  float: left;
+}
