--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -17,12 +17,29 @@
 
 <% @artist.murals.each do |mural| %>
 
- <li><%= link_to mural.location_details, artist_mural_path(@artist, mural), id:mural.id %> located in <%= link_to mural.neighborhood.name, neighborhood_path(mural.neighborhood)%></li>
+ <li><%= link_to mural.location_details, artist_mural_path(@artist, mural), id:mural.id %> located in <%= link_to mural.neighborhood.name, neighborhood_path(mural.neighborhood)%>
+   <p id="locationDetails-<%= mural.id %>"></p>
+   <p id="neighborhood-<%= mural.id %>"></p>
+ </li>
  <br>
 <% end %>
 </ul>
 
+<div id="displayMural">
+
+</div>
+
 <%= link_to 'New Mural', new_artist_mural_path(@artist) %> <%= link_to 'Edit Details', edit_artist_path %>
-<!-- <script type="text/javascript">
-  $("#artistMurals").on('click', () => alert('I was clicked'))
-</script> -->
+<script type="text/javascript">
+  $("#artistMurals").on('click', function(event){
+    event.preventDefault()
+    let path = event['target']['pathname']
+    let showMural = $.get(path)
+    showMural.done(function(muralJSON){
+      // debugger
+      $(`#locationDetails-${muralJSON.id}`).text(muralJSON.location_details)
+      $(`#neighborhood-${muralJSON.id}`).text(muralJSON.neighborhood.name)
+    })
+
+  })
+</script>
