--- a/app/views/murals/_mural.html.erb
+++ b/app/views/murals/_mural.html.erb
@@ -16,12 +16,13 @@ Check if mural is currently active?  <%= f.check_box :active %><br>
   $(function () {
     $("form#new_mural").on('submit', function(event) {
         event.preventDefault();
-        console.log(event)
+        // console.log(event)
         var values = $(this).serialize()
         var posting = $.post('/murals', values)
-        // posting.done(function (data){
-        //   console.log(data)
-        // })
+        posting.done(function (data){
+          debugger
+          console.log(data)
+        })
     })
   })
 </script>
