--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -30,16 +30,17 @@
 </div>
 
 <%= link_to 'New Mural', new_artist_mural_path(@artist) %> <%= link_to 'Edit Details', edit_artist_path %>
-<script type="text/javascript">
+
+
+<!-- <script type="text/javascript">
   $("#artistMurals").on('click', function(event){
     event.preventDefault()
     let path = event['target']['pathname']
     let showMural = $.get(path)
     showMural.done(function(muralJSON){
-      // debugger
-      $(`#locationDetails-${muralJSON.id}`).text(muralJSON.location_details)
+        $(`#locationDetails-${muralJSON.id}`).text(muralJSON.location_details)
       $(`#neighborhood-${muralJSON.id}`).text(muralJSON.neighborhood.name)
     })
 
   })
-</script>
+</script> -->
