--- a/app/views/neighborhoods/index.html.erb
+++ b/app/views/neighborhoods/index.html.erb
@@ -3,10 +3,23 @@ These are all the neighborhoods where you can find murals. <br>
 See the <%= link_to 'Top 3', neighborhoods_top_3_path %>
 <% @neighborhoods.each do |hood| %>
 
-<h2><%= hood.name %></h2>
+<h2 class='hoods' id="<%=hood.id%>"><%= hood.name %></h2>
+<div class="hide" id="hoodMurals-<%=hood.id%>">
   <ul>
     <% hood.murals.each do |mural| %>
     <li><%= link_to mural.location_details, mural_path(mural) %> by <%= link_to mural.artist.artist_name, artist_path(mural.artist) %> located in <%=link_to mural.neighborhood.name, neighborhood_path(mural.neighborhood) %><br></li>
     <% end %>
   </ul>
+  </div>
 <% end %>
+
+<script type="text/javascript" charset='utf-8'>
+$(function(){
+  $(".hoods").on('click', function(hood) {
+    let id = parseInt(hood.target.id)
+    $(`#hoodMurals-${id}`).css({
+      'display': 'block',
+    })
+  })
+})
+</script>
