--- a/app/views/murals/edit.html.erb
+++ b/app/views/murals/edit.html.erb
@@ -2,4 +2,4 @@
 
 See something wrong? Gives a little help!
 
-<%= render partial: 'mural', locals: {mural: @mural}%>
+<%= render partial: 'mural', locals: {mural: @mural, artist: @artist}%>
