--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -21,7 +21,10 @@ h4.artist-title{
   margin-right: 300px;
 }
 
-
+#newMuralForm{
+  padding-bottom: 100px;
+  padding-left: 20px;
+}
 .black{
   color: black
 }
