--- a/app/views/murals/_mural.html.erb
+++ b/app/views/murals/_mural.html.erb
@@ -1,5 +1,5 @@
 <%= form_for mural do |f| %>
-<%= f.hidden_field :artist_id, value:  set_artist_by_id.id %>
+<%= f.hidden_field :artist_id, value:  artist.id %>
 Please give us a little information about where the mural is located:  <%= f.text_field :location_details%><br>
 Location: <%= f.collection_select :neighborhood_id, Neighborhood.all, :id, :name, include_blank: 'Please select a location' %><br>
 Don't see the neighborhood please add it
@@ -12,16 +12,16 @@ Check if mural is currently active?  <%= f.check_box :active %><br>
 <%= f.submit %>
 <% end %>
 
-<script type="text/javascript" charset="utf-8">
+<!-- <script type="text/javascript" charset="utf-8">
   $(function () {
     $("form#new_mural").on('submit', function(event) {
         event.preventDefault();
-        // console.log(event)
         var values = $(this).serialize()
+        debugger
         var posting = $.post('/murals', values)
         posting.done(function (data){
           console.log(data)
         })
     })
   })
-</script>
+</script> -->
