refactoring js code and put in assests folder

--- a/app/views/murals/_mural.html.erb
+++ b/app/views/murals/_mural.html.erb
@@ -11,7 +11,7 @@ Check if mural is currently active?  <%= f.check_box :active %><br>
 <%= f.file_field :avatar %>
 <%= f.submit %>
 <% end %>
-
+<%= delete_mural %>
 <!-- <script type="text/javascript" charset="utf-8">
   $(function () {
     $("form#new_mural").on('submit', function(event) {
