--- a/app/views/murals/show.html.erb
+++ b/app/views/murals/show.html.erb
@@ -4,15 +4,17 @@
 </div>
 
 by <%= link_to @mural.artist.artist_name, artist_path(@mural.artist) %><br>
-This is where you can find it! <p id="muralLocation"><%= @mural.location_details %></p>
+This is where you can find it! <p id="muralLocation"><%= @mural.location_details %> <%= link_to 'Edit', edit_artist_mural_path(@mural.artist, @mural) %></p>
+
 <%= active?(@mural) %><br>
 Neighborhood: <p id="muralHood"><%= link_to @mural.neighborhood.name, neighborhood_path(@mural.neighborhood), id: 'muralHood' %></p>
 
-<%= next_mural(@mural) %>
 <%= previous_mural(@mural) %>
+<%= next_mural(@mural) %>
 
-<%= link_to 'Edit', edit_artist_mural_path(@mural.artist, @mural) %>
-<%= delete_mural %>
+
+
+
 
 
 <div id="mural">
