--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -37,8 +37,9 @@
 <!-- <%= link_to 'New Mural', new_artist_mural_path(@artist) %> <%= link_to 'Edit Details', edit_artist_path %> -->
 
 
-<!-- <script type="text/javascript">
+<script type="text/javascript">
   $("#artistMurals").on('click', function(event){
+    debugger
     event.preventDefault()
     let path = event['target']['pathname']
     let showMural = $.get(path)
@@ -48,4 +49,15 @@
     })
 
   })
-</script> -->
+</script>
+
+<script type="text/javascript" charset='utf-8'>
+  $(function() {
+    $("#newMural").on('click', function(e) {
+      e.preventDefault()
+      $("#newMuralForm").css({
+        'display': 'block',
+    })
+  })
+  })
+</script>
