show pointer css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,5 +89,9 @@ img{
 .history a{
   display: block;
   margin-left: auto;
-  margin-right: auto; 
+  margin-right: auto;
+}
+
+.hoods, .nextMural{
+  cursor:pointer;
 }
